--- a/leds.tex
+++ b/leds.tex
@@ -428,6 +428,7 @@ questions :
 	diode ? Pouvons-nous faire confiance à nos yeux ?
 \item Est-ce que le code fonctionnerait encore avec un seul \texttt{delay} ?
 	Pourquoi ?
+\item Comment contrôler deux sorties à la fois ?
 \end{enumerate}
 
 \end{document}
