Move a shape out of the root directory

--- a/clock.tex
+++ b/clock.tex
@@ -32,7 +32,7 @@
 \begin{document}
 \maketitle
 
-\input{srlatch}
+\input{shapes/srlatch}
 \shorthandoff{:!}
 
 %adapté http://www.texample.net/tikz/examples/d-flip-flops-and-shift-register/
