Fix CI build error (TikZ library)

--- a/leds.tex
+++ b/leds.tex
@@ -13,6 +13,7 @@
 %\usepackage{varwidth}
 \usepackage{tikz}
 \usetikzlibrary{babel}
+\usetikzlibrary{arrows}
 \usepackage{url}
 \usepackage{subcaption}
 \usepackage[siunitx]{circuitikz}
